# CubeSolverRL

./: .gitignore  README.md
backend/: api.py  inference.ipynb  inference.py  pictures.ipynb  pyproject.toml  test.ipynb  train.py
backend/agent/: agent.py  network.py  ready_agents.py
backend/api/: README.md  main.py  requirements.txt  start_api.bat  start_api.sh
backend/cube/: cube.py  enums.py  renderer.py  scramble.py  utils.py
backend/cube_env/: cube_env.py  enums.py  env.py  phases.py
backend/docs/1_edges_first_layer_v1/: README.md  training_data.parquet
backend/docs/1_edges_first_layer_v2/: README.md
backend/docs/1_edges_first_layer_v3/: README.md  training_data.parquet
backend/docs/edges_first_layer/: README.md
backend/models/: 1_edges_first_layer.pt  model_edges_first_layer.pt
backend/train/: edges_first_layer.py
frontend/: package-lock.json
frontend/src/: App.vue  colors.js  style.css
frontend/src/api/: cubeApi.js
frontend/src/components/: Controls.vue  Cube.vue  Cube3D.vue
frontend/src/logic/: api.js  cube.js  cube3x3.js
