[project]
name = "cubesolverrl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.13",
    "gymnasium>=1.1.1",
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "polars>=1.31.0",
    "pyarrow>=20.0.0",
    "rich>=14.0.0",
    "torch>=2.7.1",
    "uvicorn>=0.34.3",
]
